--- a/PyQt/pyqt_ui/bed_login.ui
+++ b/PyQt/pyqt_ui/bed_login.ui
@@ -7,17 +7,62 @@
     <x>0</x>
     <y>0</y>
     <width>1232</width>
-    <height>853</height>
+    <height>1223</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(34, 31, 31);</string>
+   <string notr="true">background-color: rgb(1,0,1);</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="5">
+   <item row="0" column="0">
+    <spacer name="horizontalSpacer_11">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>449</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="0" column="2" colspan="8">
+    <widget class="QLabel" name="label_4">
+     <property name="maximumSize">
+      <size>
+       <width>311</width>
+       <height>261</height>
+      </size>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap>../python_scripts/python_pyqt/BED_logo.jpg</pixmap>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="10">
+    <spacer name="horizontalSpacer_12">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>410</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="1" column="6">
     <spacer name="verticalSpacer_7">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -33,7 +78,7 @@
      </property>
     </spacer>
    </item>
-   <item row="1" column="0" colspan="2">
+   <item row="2" column="0" colspan="3">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -46,7 +91,7 @@
      </property>
     </spacer>
    </item>
-   <item row="1" column="2" colspan="6">
+   <item row="2" column="3" colspan="6">
     <widget class="QLabel" name="label">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -66,7 +111,7 @@ color: rgb(255, 255, 255);</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="8">
+   <item row="2" column="9" colspan="2">
     <spacer name="horizontalSpacer_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -79,7 +124,7 @@ color: rgb(255, 255, 255);</string>
      </property>
     </spacer>
    </item>
-   <item row="2" column="5">
+   <item row="3" column="6">
     <spacer name="verticalSpacer_4">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -95,7 +140,7 @@ color: rgb(255, 255, 255);</string>
      </property>
     </spacer>
    </item>
-   <item row="3" column="0">
+   <item row="4" column="0">
     <spacer name="horizontalSpacer_3">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -108,7 +153,7 @@ color: rgb(255, 255, 255);</string>
      </property>
     </spacer>
    </item>
-   <item row="3" column="1" colspan="2">
+   <item row="4" column="1" colspan="3">
     <widget class="QLabel" name="label_2">
      <property name="styleSheet">
       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
@@ -125,7 +170,7 @@ border-radius: 15px;</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="3">
+   <item row="4" column="4">
     <spacer name="horizontalSpacer_9">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -141,7 +186,7 @@ border-radius: 15px;</string>
      </property>
     </spacer>
    </item>
-   <item row="3" column="4" colspan="3">
+   <item row="4" column="5" colspan="3">
     <widget class="QLineEdit" name="lineEdit">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -149,7 +194,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="7" colspan="2">
+   <item row="4" column="8" colspan="3">
     <spacer name="horizontalSpacer_6">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -162,7 +207,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="4" column="1">
+   <item row="5" column="1">
     <spacer name="verticalSpacer_3">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -178,7 +223,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="4" column="5">
+   <item row="5" column="6">
     <spacer name="verticalSpacer_2">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -194,7 +239,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="5" column="0">
+   <item row="6" column="0">
     <spacer name="horizontalSpacer_4">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -207,7 +252,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="5" column="1" colspan="2">
+   <item row="6" column="1" colspan="3">
     <widget class="QLabel" name="label_3">
      <property name="styleSheet">
       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
@@ -224,7 +269,7 @@ border-radius: 15px;</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="3">
+   <item row="6" column="4">
     <spacer name="horizontalSpacer_10">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -240,7 +285,7 @@ border-radius: 15px;</string>
      </property>
     </spacer>
    </item>
-   <item row="5" column="4" colspan="3">
+   <item row="6" column="5" colspan="3">
     <widget class="QLineEdit" name="lineEdit_2">
      <property name="styleSheet">
       <string notr="true">background-color: rgb(209, 209, 209);
@@ -248,7 +293,7 @@ border-radius: 11px;</string>
      </property>
     </widget>
    </item>
-   <item row="5" column="7" colspan="2">
+   <item row="6" column="8" colspan="3">
     <spacer name="horizontalSpacer_5">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -261,7 +306,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="6" column="5">
+   <item row="7" column="6">
     <spacer name="verticalSpacer_5">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -277,7 +322,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="7" column="0" colspan="5">
+   <item row="8" column="0" colspan="6">
     <spacer name="horizontalSpacer_7">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -290,7 +335,7 @@ border-radius: 11px;</string>
      </property>
     </spacer>
    </item>
-   <item row="7" column="5">
+   <item row="8" column="6">
     <widget class="QPushButton" name="pushButton">
      <property name="styleSheet">
       <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
@@ -304,7 +349,7 @@ border-radius: 15px;</string>
      </property>
     </widget>
    </item>
-   <item row="7" column="6" colspan="3">
+   <item row="8" column="7" colspan="4">
     <spacer name="horizontalSpacer_8">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -317,7 +362,7 @@ border-radius: 15px;</string>
      </property>
     </spacer>
    </item>
-   <item row="8" column="5">
+   <item row="9" column="6">
     <spacer name="verticalSpacer_6">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
