--- a/PyQt/pyqt_ui/bed_mainwindow.ui
+++ b/PyQt/pyqt_ui/bed_mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1174</width>
+    <width>1183</width>
     <height>955</height>
    </rect>
   </property>
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(34, 31, 31);</string>
+   <string notr="true">background-color: rgb(1,0,1);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
@@ -36,15 +36,18 @@
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Fixed</enum>
+      </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>403</width>
+        <width>358</width>
         <height>28</height>
        </size>
       </property>
      </spacer>
     </item>
-    <item row="1" column="1" colspan="6">
+    <item row="1" column="1" colspan="5">
      <widget class="QLabel" name="label">
       <property name="maximumSize">
        <size>
@@ -63,14 +66,17 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="7">
+    <item row="1" column="6">
      <spacer name="horizontalSpacer_13">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
+      <property name="sizeType">
+       <enum>QSizePolicy::Fixed</enum>
+      </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>404</width>
+        <width>358</width>
         <height>28</height>
        </size>
       </property>
@@ -92,7 +98,7 @@
       </property>
      </spacer>
     </item>
-    <item row="3" column="2" colspan="2">
+    <item row="3" column="2">
      <widget class="QPushButton" name="ConfigButton">
       <property name="styleSheet">
        <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
@@ -136,7 +142,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="4" column="6" colspan="2">
+    <item row="4" column="6">
      <spacer name="horizontalSpacer_10">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -149,7 +155,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="5" column="2" colspan="2">
+    <item row="5" column="2">
      <widget class="QPushButton" name="CreateRecordsButton">
       <property name="styleSheet">
        <string notr="true">font-size: 14pt;background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(254,79,78,255), stop:1 rgba(51,15,15,255));
@@ -193,7 +199,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="6" column="6" colspan="2">
+    <item row="6" column="6">
      <spacer name="horizontalSpacer_7">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -250,7 +256,7 @@ border-radius: 15px;
       </property>
      </spacer>
     </item>
-    <item row="8" column="6" colspan="2">
+    <item row="8" column="6">
      <spacer name="horizontalSpacer_8">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
@@ -298,7 +304,7 @@ border-radius: 15px;
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1174</width>
+     <width>1183</width>
      <height>23</height>
     </rect>
    </property>
